--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tauri + SvelteKit + Typescript App</title>
     %sveltekit.head%
+    <style>
+      body {
+        margin: 0 !important;
+        background-color: #f0f2f2;
+      }
+    </style>
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">%sveltekit.body%</div>
+    <script>
+      document.addEventListener('contextmenu', event => event.preventDefault());
+    </script>
   </body>
 </html>
